Load help.js in index.html for F1 help modal

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
   </template>
 
   <script type="module" src="./renderer.js"></script>
+  <script src="./help.js"></script>
+  
 </body>
 </html>
+
